[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=2]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.05945
margin_bottom = 1.05945
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -178.0
margin_top = -101.5
margin_right = 178.0
margin_bottom = 101.5
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -161.5
margin_top = -86.0
margin_right = 161.5
margin_bottom = 86.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username" type="LineEdit" parent="Menu"]
margin_right = 323.0
margin_bottom = 24.0
max_length = 15
placeholder_text = "Username"

[node name="Label2" type="Label" parent="Menu"]
margin_top = 28.0
margin_right = 323.0
margin_bottom = 42.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host" type="Button" parent="Menu"]
margin_top = 46.0
margin_right = 323.0
margin_bottom = 66.0
text = "Host"

[node name="LocalIP" type="Label" parent="Menu"]
margin_top = 70.0
margin_right = 323.0
margin_bottom = 84.0
text = "Local IP address"

[node name="Label" type="Label" parent="Menu"]
margin_top = 88.0
margin_right = 323.0
margin_bottom = 102.0

[node name="Join" type="Button" parent="Menu"]
margin_top = 106.0
margin_right = 323.0
margin_bottom = 126.0
text = "Join"

[node name="Connect" type="HBoxContainer" parent="Menu"]
margin_top = 130.0
margin_right = 323.0
margin_bottom = 154.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="To" type="Label" parent="Menu/Connect"]
margin_top = 5.0
margin_right = 19.0
margin_bottom = 19.0
text = "To:"

[node name="IP" type="LineEdit" parent="Menu/Connect"]
margin_left = 23.0
margin_right = 323.0
margin_bottom = 24.0
rect_min_size = Vector2( 300, 0 )
placeholder_text = "127.0.0.1"

[node name="Error" type="Label" parent="Menu"]
margin_top = 158.0
margin_right = 323.0
margin_bottom = 172.0
custom_colors/font_color = Color( 0.8, 0.2, 0.2, 1 )
text = "Error: cannot connect to server"

[connection signal="text_entered" from="Menu/Username" to="." method="_on_text_entered"]
[connection signal="pressed" from="Menu/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="Menu/Join" to="." method="_on_Join_pressed"]
[connection signal="text_entered" from="Menu/Connect/IP" to="." method="_on_text_entered"]
